# ROCPP

./:  .gitignore  .gitignore  .gitignore.exclude  BB.cpp  CMakeLists.txt  Constraint.cpp  Constraint.hpp  ConstraintTerm.cpp  ConstraintTerm.hpp  DDUApproximator.cpp  DDUApproximator.hpp  DDUApproximatorOther.cpp  DDUApproximatorOther.hpp  DDUApproximatorPW.cpp  DDUApproximatorPW.hpp  DecisionRule.cpp  DecisionRule.hpp  DecisionVariable.cpp  DecisionVariable.hpp  Exceptions.cpp  FileRelations.cpp  GurobiModeller.cpp  GurobiModeller.hpp  HeaderIncludeFiles.hpp  IncludeFiles.hpp  IndexSetCreator.cpp  Interface.cpp  Interface.hpp  KADecisionRule.cpp  KADecisionRule.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  OptModelConverters.cpp  OptModelConverters.hpp  OptimizationModel.cpp  OptimizationModel.hpp  PB.cpp  PWDecisionRule.cpp  PWDecisionRule.hpp  README.md  (+21 more)
cmake/Modules/: FindGUROBI.cmake
data/: README.md
docs/: README.md
examples_cpp/: BB.cpp  PB.cpp  RSFC.cpp
examples_py/: BB.py  PB.py  RSFC.py
results/: README.md
scripts/examples_cpp/: BB.cpp  PB.cpp  RSFC.cpp  main.cpp
scripts/examples_py/: BB.py  PB.py  RSFC.py
src/: CMakeLists.txt  Constraint.cpp  ConstraintTerm.cpp  DecisionRule.cpp  DecisionVariable.cpp  Exceptions.cpp  FileRelations.cpp  GurobiModeller.cpp  IndexSetCreator.cpp  Interface.cpp  KADecisionRule.cpp  Kadaptability.cpp  ObjectiveFunction.cpp  OptModelConverters.cpp  OptimizationModel.cpp  PWDecisionRule.cpp  ROPYInterface.cpp  ROPyInterface.cpp  ReformulationOrchestrator.cpp  RobustifyEngine.cpp  SCIPModeller.cpp  SolverModeller.cpp  Uncertainty.cpp  UncertaintyConverter.cpp  VariableConverter.cpp  helpersOpt.cpp
src/include/: Constraint.hpp  ConstraintTerm.hpp  DecisionRule.hpp  DecisionVariable.hpp  Exceptions.hpp  FileRelations.hpp  GurobiModeller.hpp  HeaderIncludeFiles.hpp  IncludeFiles.hpp  IndexSetCreator.hpp  Interface.hpp  KADecisionRule.hpp  Kadaptability.hpp  ObjectiveFunction.hpp  OptModelConverters.hpp  OptimizationModel.hpp  PWDecisionRule.hpp  ROCPP.h  ReformulationOrchestrator.hpp  RobustifyEngine.hpp  SCIPModeller.hpp  SolverModeller.hpp  Uncertainty.hpp  UncertaintyConverter.hpp  VariableConverter.hpp  helpersOpt.hpp  stdafx.hpp
